--- a/frontend/src/components/splash/SplashFeatured.css
+++ b/frontend/src/components/splash/SplashFeatured.css
@@ -1,4 +1,3 @@
-
 .featured {
   width: 100%;
   padding: 8rem 0;
@@ -39,7 +38,7 @@
   display: flex;
   flex-direction: column;
   padding: 12px 22px;
-  margin: .4rem;
+  margin: 0.4rem;
   width: 170px;
   height: 170px;
   border-radius: 24px;
@@ -60,7 +59,7 @@
 .featured .right img {
   width: 50px;
   margin: auto;
-  padding: .2rem 0;
+  padding: 0.2rem 0;
 }
 
 .featured .icon {
@@ -85,17 +84,20 @@
 
 @media screen and (max-width: 940px) {
   .featured .container {
-      grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
 
   .featured .left .btn {
-      align-self: center;
+    align-self: center;
   }
 }
 
-
 @media screen and (max-width: 478px) {
   .featured .container .right .card {
-      width: 100%;
+    width: 100%;
   }
+}
+
+.signup .right a {
+	text-decoration-line: none;
 }
